--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
           <hr>
-          <button class="btn btn-primary btn-xl">Find out more</button>
+          <a href="https://mailchi.mp/6983a17b3504/pribor">
+            <button class="btn btn-primary btn-xl">Find out more</button>
+          </a>
         </section>
       </div>
     </div>
